--- a/404.html
+++ b/404.html
@@ -1,55 +1,132 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>페이지를 찾을 수 없습니다 - 인하대학교 소프트웨어융합대학</title>
+    <title>404 - 페이지를 찾을 수 없습니다</title>
     <style>
+        :root {
+            --primary: #005CAA;
+            --accent: #00B0F0;
+            --bg: #f8fafc;
+        }
+
         body {
             margin: 0;
             padding: 0;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, system-ui, Roboto, sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #f5f7fa;
-            color: #333;
-            text-align: center;
+            background: linear-gradient(135deg, #f0f7ff 0%, #ffffff 100%);
+            color: #1e293b;
+            overflow: hidden;
         }
+
+        .background-blob {
+            position: absolute;
+            width: 500px;
+            height: 500px;
+            background: radial-gradient(circle, rgba(0, 176, 240, 0.1) 0%, rgba(0, 92, 170, 0.05) 50%, transparent 70%);
+            border-radius: 50%;
+            z-index: 0;
+            filter: blur(40px);
+            animation: move 20s infinite alternate;
+        }
+
+        @keyframes move {
+            from {
+                transform: translate(-10%, -10%);
+            }
+
+            to {
+                transform: translate(10%, 10%);
+            }
+        }
+
         .container {
-            max-width: 600px;
-            padding: 2rem;
+            position: relative;
+            z-index: 1;
+            text-align: center;
+            padding: 3rem;
+            background: rgba(255, 255, 255, 0.7);
+            backdrop-filter: blur(20px);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            border-radius: 30px;
+            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.05);
+            max-width: 90%;
+            width: 450px;
+            animation: fadeInUp 0.8s ease-out;
         }
+
         h1 {
-            font-size: 4rem;
-            color: #005CAA; /* Inha Blue */
-            margin-bottom: 1rem;
+            font-size: 6rem;
+            font-weight: 900;
+            margin: 0;
+            background: linear-gradient(to bottom right, var(--primary), var(--accent));
+            background-clip: text;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            line-height: 1;
         }
-        p {
+
+        .status {
             font-size: 1.25rem;
-            margin-bottom: 2rem;
-            color: #666;
+            font-weight: 600;
+            color: var(--primary);
+            margin-bottom: 1rem;
+            letter-spacing: 0.1em;
         }
-        a {
+
+        p {
+            font-size: 1.1rem;
+            color: #64748b;
+            margin-bottom: 2.5rem;
+            line-height: 1.6;
+        }
+
+        .btn {
             display: inline-block;
-            padding: 0.8rem 1.5rem;
-            background-color: #005CAA;
+            padding: 1rem 2rem;
+            background-color: var(--primary);
             color: white;
             text-decoration: none;
-            border-radius: 5px;
-            transition: background-color 0.3s;
+            border-radius: 12px;
+            font-weight: 600;
+            transition: all 0.3s;
+            box-shadow: 0 4px 12px rgba(0, 92, 170, 0.2);
         }
-        a:hover {
-            background-color: #004480;
+
+        .btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 8px 20px rgba(0, 92, 170, 0.3);
+            background-color: #004a8a;
+        }
+
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
     </style>
 </head>
+
 <body>
+    <div class="background-blob"></div>
     <div class="container">
-        <h1>404</h1>
-        <p>죄송합니다. 요청하신 페이지를 찾을 수 없습니다.</p>
-        <a href="/">홈으로 돌아가기</a>
+        <div class="status">INHA-SWC</div>
+        <h1>Error</h1>
+        <p>요청하신 페이지가 존재하지 않거나 <br> 주소가 변경되었을 수 있습니다.</p>
+        <a href="/" class="btn">메인으로 돌아가기</a>
     </div>
 </body>
+
 </html>
