feat: update index.html

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                 <h2>Welcome to INHA SWC</h2>
                 <div class="grid">
                     <div class="card">
-                        <h3>🤝 함께하는 시작</h3>
-                        <p>선배들과 동기, 더 나아가 소프트웨어융합대학 소속 학우들과 함께 즐거운 시간을 보낼 수 있어요.</p>
+                        <h3>으악 귀찮아</h3>
+                        <p>선배들과 동기, 더 나아가 소프트웨어융합대학 소속 학우들과 함께 즐거운 시간을 보낼 수 있을까요..?</p>
                     </div>
                     <div class="card">
-                        <h3>🎉 즐거운 추억</h3>
-                        <p>다양한 레크리에이션과 동아리 공연 등 다양한 컨텐츠가 준비되어 있어요.</p>
+                        <h3>ㅠㅠ</h3>
+                        <p>다양한 레크리에이션과 동아리 공연 등 재밌는 활동이 준비되어 있어요.....,,,,,</p>
                     </div>
                 </div>
             </div>
